#444 Refactor of search services
New services created that stick to one function